Fix: Header layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .inputStyles {
-  @apply bg-slate-100 text-slate-600  rounded-lg p-3 outline-transparent border-2 border-transparent hover:border-violet-600 focus:border-violet-600 focus:outline-none transition 
+  @apply bg-slate-100 text-slate-600  rounded-lg p-3 px-8 border-2 border-transparent hover:border-violet-600 focus:border-violet-600 focus:outline-none transition
 }
 
 .btn {
@@ -35,7 +35,7 @@
     @apply w-6 h-6;
   }
   .inputStyles::placeholder {
-    @apply text-slate-400 ;
+    @apply text-slate-400;
   }
   .stylesInputsField input,
   .stylesInputsField textarea,
